syntax = "proto3";

option go_package = ".;info";

service UserService {
  rpc getUserInfo (UserRequest) returns (UserReply) {}
}

message UserRequest {
  string id = 1;
}

message UserReply {
  string name = 1;
  string age = 2;
}